===v6.2.0===
 * New condition: NPC ID.
 * Mass refactoring has taken place. You will need to restart WoW when upgrading to this version of TellMeWhen.
 * Multi-state Cooldown icons can now keep track of spell charges.
 * Added a new setting to the Runes condition that allows you to force the condition to check for non-death runes.
 
 * New Conditions:
 ** Weekday
 ** Time of Day
 ** Quest Complete
 
 * Bug Fixes:
 ** The IncreasedStats equivalency should now always properly check for the Legacy of the Emperor buff
 ** Groups being moved (dragged around) should now much  more reliably detatch from your cursor when they are supposed to.
 ** Fixed an accidental inversion of the 1st param to TMW_LOCK_TOGGLED
 ** Replaced Blood Pact with Dark Intent for the IncreasedStamina equivalency.
 ** The "All Types" setting for Loss of Control icons should now work as intended.
 ** Attempted to fix issue where the "You are not in a raid" message would be cause by TellMeWhen.
 ** Fixed: Components\IconModules\IconModule_Alpha\Alpha.lua:145 attempt to perform arithmetic on field "actualAlphaAtLastChange" (a nil value)

===v6.1.5===
 * Bug Fixes:
 ** Fixed an offset error with the Instance Type condition. 

===v6.1.4===
 * Bug Fixes:
 ** Forgot to remove a call to a method that was retired in 5.2 when I upgraded the code to work with 5.2 (GetInstanceDifficulty).

===v6.1.3===
 * New icon type: Swing Timer.
 * New conditions: Swing Timer - Main Hand; Swing Timer - Off Hand.
 * Added textures to the icon type select menu.
 * All pre-MoP compatibility code has been removed.
 * You can now use item slot IDs as dynamic Custom Texture values. Syntax is {{{$item.1}}}, where 1 is the item slot ID (1-19) that you want to use.
 * Added a setting to customize the shadow on text displays.
 
 * Bug Fixes:
 ** Text from the Text Displays module should now always appear above all other icon elements.